# remsvc

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  reccmp-project.yml
.github/workflows/: ci.yml
c1/: alloc.h  browser.cpp  browser.h  incremental.cpp  incremental.h  msc1.cpp  msvcrt.h  pch.c  pch.h  types.h
decomp/: decomp.h
decomp/compat/: stdbool.h  stdint.h
frontend/: args.c  args.h  callbacks.h  main.c  types.h
lib/: main.c
mspdb/: CMakeLists.txt  regen_implibs.sh
mspdb/include/: mspdb41.h
mspdb/lib/x86/: mspdb41.def  mspdb41.lib
portable/: portable.h
